Fix/tooltip-overlapped-by-ui-elements (#125)
* TODO

* TODO

* increase z index

* - Fixed issue with being overlapped by 'normal' UI elements

--- a/src/bbtooltip/styles.module.scss
+++ b/src/bbtooltip/styles.module.scss
@@ -38,7 +38,7 @@ $warning-dark-color: var(--warning-dark-color, darken(#f1c500, 10%));
 // tooltip variables
 $tooltip-padding: var(--tooltip-padding, 0.5rem 1rem);
 $tooltip-border-radius: var(--tooltip-border-radius, 8px);
-$tooltip-z-index: var(--tooltip-z-index, 1070);
+$tooltip-z-index: var(--tooltip-z-index, 9000);
 $tooltip-box-shadow: var(--tooltip-box-shadow, 0 4px 6px rgba(0, 0, 0, 0.1));
 $tooltip-arrow-size: var(--tooltip-arrow-size, 4px);
 $tooltip-transition-duration: 0.2s;
